<resources>
    <string name="app_name">Task Planner</string>
    <string name="drawer_open">Menu opened</string>
    <string name="drawer_close">Menu closed</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Log out</string>

    <string name="my_projects">My projects</string>
    <string name="my_tasks">My tasks</string>
    <string name="today_task">Today</string>
    <string name="filters">Filters</string>
    <string name="settings">Settings</string>

    <!-- Message Générique -->
    <string name="creating_account">Creating account ...</string>
    <string name="authenticating">Authenticating ...</string>
    <string name="loading">Loading ...</string>
    <string name="login_failed">Login failed.</string>

    <string name="tabOverview">Overview</string>
    <string name="tabDetails">Details</string>
    <string name="tabMessages">Messages</string>
    <string name="tabTasks">Tasks</string>

    <!-- Messages d'erreur -->
    <string name="invalid_email_error_message">Enter a valid email address.</string>
    <string name="invalid_name_error_message">"Name must be at least 3 characters."</string>
    <string name="invalid_password_error_message">Password must be at least 6 alphanumeric characters.</string>
    <string name="unreachable_server_error_message">We could not contact the server. Please check your network connection and try again!</string>

    <!-- Task Adapter -->
    <string name="date_ferme">Closed on </string>
    <string name="date_fini">Deadline: </string>
    <string name="tache"> Task</string>


    <!-- Actionbar title -->
    <string name="Actionbar_projects">My Projects</string>
    <string name="Actionbar_project">Project\'s details</string>
    <string name="Actionbar_today">Today</string>
    <string name="Actionbar_tasks">My Tasks</string>

    <!-- Project overview -->
    <string name="TacheToday">Task are for today</string>
    <string name="TacheLate">Task are late</string>
    <string name="TacheClosed">Task are closed</string>

    <!-- Task overview -->
    <string name="TacheCreate">Created: </string>
    <string name="TacheDeadline">Deadline: </string>


    <string name="NotImplemented">Feature not yet implemented</string>

    <string name="ProjectName">Project\'s name</string>
    <string name="ProjectDescription">Project\'s description</string>
    <string name="ProjectDeadline">Deadline</string>
    <string name="ProjectEdit">Edit</string>
    <string name="ProjectAdd">Create</string>

    <string name="TaskName">Task\'s name</string>
    <string name="TaskDescription">Task\'s description</string>
    <string name="TaskDeadline">Deadline</string>
    <string name="TaskEdit">Edit</string>
    <string name="TaskAdd">Create</string>

</resources>
